# video-caption

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  video_caption.code-workspace
.devcontainer/: Dockerfile  config_devcontainer.sh  devcontainer.json
app/: main.py
app/static/: style.css
app/templates/: hello.html  result.html
config/: credentials.json
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst  installation.rst  usage.rst
notebooks/: POC_transformer_decoder.ipynb  jupytext_example.py  loss_charts.ipynb
runs/Jun29_16-25-22_Sergis-MacBook-Pro.local/: events.out.tfevents.1688048722.Sergis-MacBook-Pro.local.53492.0
runs/Jun29_16-42-00_Sergis-MacBook-Pro.local/: events.out.tfevents.1688049720.Sergis-MacBook-Pro.local.53840.0
runs/Jun29_16-44-12_Sergis-MacBook-Pro.local/: events.out.tfevents.1688049852.Sergis-MacBook-Pro.local.53950.0
runs/Jun29_16-45-48_Sergis-MacBook-Pro.local/: events.out.tfevents.1688049948.Sergis-MacBook-Pro.local.54020.0
runs/Jun29_16-47-21_Sergis-MacBook-Pro.local/: events.out.tfevents.1688050041.Sergis-MacBook-Pro.local.54068.0
runs/Jun29_16-47-43_Sergis-MacBook-Pro.local/: events.out.tfevents.1688050063.Sergis-MacBook-Pro.local.54102.0
runs/Jun29_16-48-55_Sergis-MacBook-Pro.local/: events.out.tfevents.1688050135.Sergis-MacBook-Pro.local.54130.0
runs/Jun29_16-49-33_Sergis-MacBook-Pro.local/: events.out.tfevents.1688050173.Sergis-MacBook-Pro.local.54162.0
runs/Jun29_16-51-59_Sergis-MacBook-Pro.local/: events.out.tfevents.1688050319.Sergis-MacBook-Pro.local.54213.0
runs/Jun29_16-52-17_Sergis-MacBook-Pro.local/: events.out.tfevents.1688050337.Sergis-MacBook-Pro.local.54246.0
runs/Jun29_16-52-57_Sergis-MacBook-Pro.local/: events.out.tfevents.1688050377.Sergis-MacBook-Pro.local.54284.0
runs/Jun29_16-56-35_Sergis-MacBook-Pro.local/: events.out.tfevents.1688050595.Sergis-MacBook-Pro.local.54352.0
runs/Jun29_16-58-41_Sergis-MacBook-Pro.local/: events.out.tfevents.1688050721.Sergis-MacBook-Pro.local.54528.0
runs/Jun29_17-01-00_Sergis-MacBook-Pro.local/: events.out.tfevents.1688050860.Sergis-MacBook-Pro.local.54579.0
runs/Jun29_17-01-49_Sergis-MacBook-Pro.local/: events.out.tfevents.1688050909.Sergis-MacBook-Pro.local.54620.0
runs/Jun29_17-03-19_Sergis-MacBook-Pro.local/: events.out.tfevents.1688050999.Sergis-MacBook-Pro.local.54659.0
runs/Jun29_17-06-01_Sergis-MacBook-Pro.local/: events.out.tfevents.1688051161.Sergis-MacBook-Pro.local.54713.0
runs/Jun29_17-07-57_Sergis-MacBook-Pro.local/: events.out.tfevents.1688051277.Sergis-MacBook-Pro.local.54818.0
tests/: __init__.py
tests/unit/: test_utils.py
vid_cap/: __init__.py  __main__.py  dataset.py  drive.py
vid_cap/gdrive_adapter/: __init__.py  drive.py  readme.md
vid_cap/model/: __model_transformer_decoder.py  __positional_encoding.py  data_setup.py  model_builder.py  train.py  utils.py
vid_cap/modelling/: __init__.py  _utils.py  preprocessing.py  scheduler.py  test.py  train.py
vid_cap/modelling/model/: __init__.py  __model_transformer_decoder.py  engine.py  (+2 more)
vid_cap/scripts/: __init__.py  dummy.py  experiment.py  inference.py  prepare_dataset.py  test.py  train.py
vid_cap/utils/: __init__.py  __vocab_helper.py  _hello.py  _utils.py  early_stopper.py  loss_plot.py  model_saver.py
(+7 files in other folders)
